add animation skills

--- a/index.html
+++ b/index.html
@@ -107,48 +107,40 @@
                     <div class="skill">
                         <h4 class="skill-name">Html5</h4>
                         <div class="progress">
-                            <div class="progress-bar">
-                                50%
+                            <div class="progress-bar html">
+                                85%
                             </div>
                         </div>
                     </div>
                     <div class="skill">
                         <h4 class="skill-name">Javascript</h4>
                         <div class="progress">
-                            <div class="progress-bar">
-                                50%
+                            <div class="progress-bar javascript">
+                                60%
                             </div>
                         </div>
                     </div>
                     <div class="skill">
                         <h4 class="skill-name">PHP</h4>
                         <div class="progress">
-                            <div class="progress-bar">
-                                50%
+                            <div class="progress-bar php" >
+                                60%
                             </div>
                         </div>
                     </div>
                     <div class="skill">
                         <h4 class="skill-name">Wordpress</h4>
                         <div class="progress">
-                            <div class="progress-bar">
-                                50%
+                            <div class="progress-bar wordpress">
+                                65%
                             </div>
                         </div>
                     </div>
                     <div class="skill">
                         <h4 class="skill-name">CSS3</h4>
                         <div class="progress">
-                            <div class="progress-bar">
-                                50%
-                            </div>
-                        </div>
-                    </div>
-                    <div class="skill">
-                        <h4 class="skill-name">CSS3</h4>
-                        <div class="progress">
-                            <div class="progress-bar">
-                                50%
+                            <div class="progress-bar css">
+                                70%
                             </div>
                         </div>
                     </div>
