--- a/index.html
+++ b/index.html
@@ -13,15 +13,19 @@
     <header class="header" id="header">
         <div class="container content-header">
             <div class="logo">
-                <a href="#">
-                    <img src="assets/IMG/logo.png" alt="">
+                <a href="index.html">
+                    <img src="assets/IMG/logo.png" alt="logo ml">
                 </a>
             </div>
                 <button class="hamburger" id="hamburger">
-                    <div class="line"></div>
+                    <div class="line-ham"></div>
                 </button>
             <ul class="menu" id="menu">
-                <li class="menu-item"><a href="#" class="menu-link logo"><img src="assets/IMG/logo.png" alt=""></a></li>
+                <div class="logo">
+                    <a href="index.html">
+                        <img src="assets/IMG/logo.png" alt="logo ml">
+                    </a>
+                </div>
                 <li class="menu-item"><a href="#" class="menu-link" aria-current="page">Inicio</a></li>
                 <li class="menu-item"><a href="#" class="menu-link">Acerca</a></li>
                 <li class="menu-item"><a href="#" class="menu-link">Educación</a></li>
@@ -33,8 +37,8 @@
     <section class="home">
             <div class="transparent-mask">
                 <article class="container">
-                    <div class="center-box">
-                        <div class="text-box">
+                    <div class="center">
+                        <div class="content">
                             <h1>Hola, soy Mary</h1>
                             <h3><span class="web-developer">desarrolladora web</span></h3>
                             <ul class="social-media">
@@ -53,25 +57,23 @@
             </div>
             <div class="separator">
                 <svg id="Grupo_9" data-name="Grupo 9" xmlns="http://www.w3.org/2000/svg" width="1920.004" height="322.611" viewBox="0 0 1920.004 322.611">
-                    <path id="Trazado_8" data-name="Trazado 8" d="M0,41.35C88.575,30,195.719,33.916,309.81,77a673.642,673.642,0,0,1,91.2,42.617C733.02,305.628,939,284.61,1138.26,247.61s216.231-44.568,477.79,19c120.432,29.27,225.563,30.283,303.954,22.856v33.145H0Z" fill="#f55422" opacity="0.07"/>
+                    <path id="Trazado_8" data-name="Trazado 8" d="M0,41.35C88.575,30,195.719,33.916,309.81,77a673.642,673.642,0,0,1,91.2,42.617C733.02,305.628,939,284.61,1138.26,247.61s216.231-44.568,477.79,19c120.432,29.27,225.563,30.283,303.954,22.856v33.145H0Z" fill="#de9455" opacity="0.1"/>
                     <path id="Trazado_9" data-name="Trazado 9" d="M0,55.9c99.143-1.174,229.965,20.129,392.831,92.9C812.7,336.4,1003.178,287.384,1138.256,259.832s204.133-34.643,465.692,28.926A938.5,938.5,0,0,0,1920,310.438v12.173H0Z" fill="#11141b"/>
                 </svg>
             </div>
     </section>
     <section class="about">
         <article class="container">
-            <div class="center-box">
-                <div class="section-title">
+            <div class="center">
+                <div class="title">
                     <h2>ACERCA DE MI</h2>
-                    <div class="title-line">
-                        <span class="line-1"></span>
+                    <div class="line">
                         <span class="circule"></span>
-                        <span class="line-2"></span>
                     </div>
                 </div>
                 <div class="data-about">
-                    <div class="image-about-content">
-                        <div class="image-size">
+                    <div class="profile-image">
+                        <div class="profile-image-border">
                             <img src="assets/IMG/profile.jpg" alt="">
                         </div>
                     </div>
@@ -95,52 +97,52 @@
     <section class="skills">
         <div class="transparent-mask">
             <article class="container">
-                <div class="section-title">
-                    <h2>Mis habilidades</h2>
-                    <div class="title-line">
-                        <span class="line-1"></span>
-                        <span class="circule"></span>
-                        <span class="line-2"></span>
-                    </div>
-                </div>
-                <div class="list-skills">
-                    <div class="skill">
-                        <h4 class="skill-name">Html5</h4>
-                        <div class="progress">
-                            <div class="progress-bar html">
-                                85%
-                            </div>
+                <div class="center">
+                    <div class="title">
+                        <h2>Mis habilidades</h2>
+                        <div class="line">
+                            <span class="circule"></span>
                         </div>
                     </div>
-                    <div class="skill">
-                        <h4 class="skill-name">Javascript</h4>
-                        <div class="progress">
-                            <div class="progress-bar javascript">
-                                60%
+                    <div class="list-skills">
+                        <div class="skill">
+                            <h4 class="skill-name">Html5</h4>
+                            <div class="progress">
+                                <div class="progress-bar html">
+                                    85%
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="skill">
-                        <h4 class="skill-name">PHP</h4>
-                        <div class="progress">
-                            <div class="progress-bar php" >
-                                60%
+                        <div class="skill">
+                            <h4 class="skill-name">Javascript</h4>
+                            <div class="progress">
+                                <div class="progress-bar javascript">
+                                    60%
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="skill">
-                        <h4 class="skill-name">Wordpress</h4>
-                        <div class="progress">
-                            <div class="progress-bar wordpress">
-                                65%
+                        <div class="skill">
+                            <h4 class="skill-name">PHP</h4>
+                            <div class="progress">
+                                <div class="progress-bar php" >
+                                    60%
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="skill">
-                        <h4 class="skill-name">CSS3</h4>
-                        <div class="progress">
-                            <div class="progress-bar css">
-                                70%
+                        <div class="skill">
+                            <h4 class="skill-name">Wordpress</h4>
+                            <div class="progress">
+                                <div class="progress-bar wordpress">
+                                    65%
+                                </div>
+                            </div>
+                        </div>
+                        <div class="skill">
+                            <h4 class="skill-name">CSS3</h4>
+                            <div class="progress">
+                                <div class="progress-bar css">
+                                    70%
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -148,12 +150,97 @@
             </article>
         </div>
     </section>
-    <section class="experience-education">
+    <section class="experiences">
         <article class="container">
+            <div class="center">
+                <div class="title">
+                    <h2>Experiencias</h2>
+                    <div class="line">
+                        <span class="circule"></span>
+                    </div>
+                </div>
+                <div class="data-experiences">
+                    <div class="experience">
+                        <div class="experience-content">
+                            <h3 class="position">Proyecto personal</h3>
+                            <span class="years">2021-2022</span>
+                            <span class="company-name">sise</span>
+                            <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas culpa fugit, consequatur, provident nemo sequi aliquam adipisci voluptate soluta, obcaecati ipsam ab earum. Adipisci distinctio incidunt quas doloremque ea natus!</p>
+                            <div class="icon-experience">
+                                <i class="fa-solid fa-suitcase"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="experience">
+                        <div class="experience-content">
+                            <h3 class="position">Proyecto personal</h3>
+                            <span class="years">2021-2022</span>
+                            <span class="company-name">sise</span>
+                            <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas culpa fugit, consequatur, provident nemo sequi aliquam adipisci voluptate soluta, obcaecati ipsam ab earum. Adipisci distinctio incidunt quas doloremque ea natus!</p>
+                            <div class="icon-experience">
+                                <i class="fa-solid fa-suitcase"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="experience">
+                        <div class="experience-content">
+                            <h3 class="position">Proyecto personal</h3>
+                            <span class="years">2021-2022</span>
+                            <span class="company-name">sise</span>
+                            <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas culpa fugit, consequatur, provident nemo sequi aliquam adipisci voluptate soluta, obcaecati ipsam ab earum. Adipisci distinctio incidunt quas doloremque ea natus!</p>
+                            <div class="icon-experience">
+                                <i class="fa-solid fa-suitcase"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="experience">
+                        <div class="experience-content">
+                            <h3 class="position">Proyecto personal</h3>
+                            <span class="years">2021-2022</span>
+                            <span class="company-name">sise</span>
+                            <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas culpa fugit, consequatur, provident nemo sequi aliquam adipisci voluptate soluta, obcaecati ipsam ab earum. Adipisci distinctio incidunt quas doloremque ea natus!</p>
+                            <div class="icon-experience">
+                                <i class="fa-solid fa-suitcase"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </article>
     </section>
     <section class="portfolio">
-        portafolio
+        <div class="transparent-mask">
+            <div class="container">
+                <div class="center">
+                    <div class="title">
+                        <h2>Portafolio</h2>
+                        <div class="line">
+                            <span class="circule"></span>
+                        </div>
+                    </div>
+                    <div class="portfolio-list">
+                        <div class="item">
+                            <img src="assets/IMG/hiddenBeauty.png" alt="">
+                            <div class="img-movil">
+                                <img src="assets/IMG/hiddenBeautyMovil.png" alt="">
+                            </div>
+                        </div>
+                        <div class="item">
+                            <img src="assets/IMG/mypets.png" alt="">
+                            <div class="img-movil">
+                                <img src="assets/IMG/mypetsMovil.png" alt="">
+                            </div>
+                        </div>
+                        <div class="item">
+                            <img src="assets/IMG/tendenze.png" alt="">
+                            <div class="img-movil">
+                                <img src="assets/IMG/tendenzeMovil.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
     <section class="contact">
         contacto
