--- a/index.html
+++ b/index.html
@@ -243,7 +243,9 @@
         </div>
     </section>
     <section class="contact">
-        contacto
+        <div class="container">
+
+        </div>
     </section>
     <footer>
         footer
