projects update and contact information

--- a/index.html
+++ b/index.html
@@ -208,34 +208,67 @@
             </div>
         </article>
     </section>
-    <section class="portfolio">
+    <section class="projects">
         <div class="transparent-mask">
             <div class="container">
                 <div class="center">
                     <div class="title">
-                        <h2>Portafolio</h2>
+                        <h2>Proyectos</h2>
                         <div class="line">
                             <span class="circule"></span>
                         </div>
                     </div>
-                    <div class="portfolio-list">
-                        <div class="item">
-                            <img src="assets/IMG/hiddenBeauty.png" alt="">
-                            <div class="img-movil">
-                                <img src="assets/IMG/hiddenBeautyMovil.png" alt="">
-                            </div>
+                    <div class="project-list">
+                        <div class="project">
+                                <div class="project-image">
+                                        <img src="assets/IMG/2.png" alt="my pets">
+                                        <div class="project-details">
+                                            <h3 class="project-name">My Pets</h3>
+                                            <p class="project-category">Blog de perros</p>
+                                            <div class="project-links">
+                                                <div class="view-project ">
+                                                    <div class="tooltip">
+                                                        Ver proyecto
+                                                    </div>
+                                                    <a href="http://localhost/wordpress/mypets" target="_blank"><i class="fa-solid fa-eye"></i></a>
+                                                </div>  
+                                            </div>
+                                        </div>
+                                </div>
                         </div>
-                        <div class="item">
-                            <img src="assets/IMG/mypets.png" alt="">
-                            <div class="img-movil">
-                                <img src="assets/IMG/mypetsMovil.png" alt="">
-                            </div>
+                        <div class="project">
+                                <div class="project-image">
+                                        <img src="assets/IMG/3.png" alt="my pets">
+                                        <div class="project-details">
+                                            <h3 class="project-name">Hidden Beauty</h3>
+                                            <p class="project-category">Salon de belleza</p>
+                                            <div class="project-links">
+                                                <div class="view-project ">
+                                                    <div class="tooltip">
+                                                        Ver proyecto
+                                                    </div>
+                                                    <a href="http://localhost/wordpress/hiddenBeauty" target="_blank"><i class="fa-solid fa-eye"></i></a>
+                                                </div>  
+                                            </div>
+                                        </div>
+                                </div>
                         </div>
-                        <div class="item">
-                            <img src="assets/IMG/tendenze.png" alt="">
-                            <div class="img-movil">
-                                <img src="assets/IMG/tendenzeMovil.png" alt="">
-                            </div>
+                        <div class="project">
+                                <div class="project-image">
+                                        <img src="assets/IMG/1.png" alt="my pets">
+                                        <div class="project-details">
+                                            <h3 class="project-name">Grupo tendeze comunicaciones</h3>
+                                            <p class="project-category">Blog</p>
+                                            <div class="project-links">
+                                                <div class="view-project ">
+                                                    <div class="tooltip">
+                                                        Ver proyecto
+                                                    </div>
+                                                    <a href="http://localhost/wordpress/tendenze" target="_blank"><i class="fa-solid fa-eye"></i></a>
+                                                </div>  
+                                            </div>
+                                        </div>
+                                </div>
                         </div>
                     </div>
                 </div>
@@ -244,13 +277,38 @@
     </section>
     <section class="contact">
         <div class="container">
-
+            <div class="center">
+                <div class="title">
+                    <h2>Contacto</h2>
+                    <div class="line">
+                        <span class="circule"></span>
+                    </div>
+                </div>
+                <div class="contact-means">
+                    <div class="contact-item">
+                        <div class="contact-item-icon"><i class="fa-solid fa-phone-flip"></i></div>
+                        <div class="contact-item-name">Teléfono</div>
+                        <div class="contact-item-data">+51 981735819</div>
+                    </div>
+                    <div class="contact-item">
+                        <div class="contact-item-icon"><i class="fa-solid fa-envelope"></i></div>
+                        <div class="contact-item-name">Correo</div>
+                        <div class="contact-item-data">parionamaryluz@gmail.com</div>
+                    </div>
+                    <div class="contact-item">
+                        <div class="contact-item-icon"><i class="fa-solid fa-location-dot"></i></div>
+                        <div class="contact-item-name">Dirección</div>
+                        <div class="contact-item-data">Lima, Perú</div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
-    <footer>
-        footer
+    <footer class="footer">
+        <div class="container">
+            Copyright ©2022 — Mary Luz Pariona
+        </div>
     </footer>
-
     <script type="module" src="assets/JS/app.js"></script>
 </body>
 </html>
