changes contact and footer

--- a/index.html
+++ b/index.html
@@ -286,12 +286,20 @@
                 </div>
                 <div class="contact-means">
                     <div class="contact-item">
-                        <div class="contact-item-icon"><i class="fa-solid fa-phone-flip"></i></div>
+                        <div class="contact-item-icon">
+                            <a href="tel:51981735819">
+                                <i class="fa-solid fa-phone-flip"></i>
+                            </a>
+                        </div>
                         <div class="contact-item-name">Teléfono</div>
                         <div class="contact-item-data">+51 981735819</div>
                     </div>
                     <div class="contact-item">
-                        <div class="contact-item-icon"><i class="fa-solid fa-envelope"></i></div>
+                        <div class="contact-item-icon">
+                            <a href="mailto:parionamaryluz@gmail.com">
+                                <i class="fa-solid fa-envelope"></i>
+                            </a>
+                        </div>
                         <div class="contact-item-name">Correo</div>
                         <div class="contact-item-data">parionamaryluz@gmail.com</div>
                     </div>
