--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="container content-header">
             <div class="logo">
                 <a href="index.html">
-                    <img src="assets/IMG/logo.png" alt="logo ml">
+                    <img src="assets/IMG/logo01.png" alt="logo ml">
                 </a>
             </div>
                 <button class="hamburger" id="hamburger">
@@ -26,11 +26,12 @@
                         <img src="assets/IMG/logo.png" alt="logo ml">
                     </a>
                 </div>
-                <li class="menu-item"><a href="#" class="menu-link" aria-current="page">Inicio</a></li>
-                <li class="menu-item"><a href="#" class="menu-link">Acerca</a></li>
-                <li class="menu-item"><a href="#" class="menu-link">Educación</a></li>
-                <li class="menu-item"><a href="#" class="menu-link">Portafolio</a></li>
-                <li class="menu-item"><a href="#" class="menu-link">Contacto</a></li>
+                <li class="menu-item"><a href="index.html" class="menu-link" aria-current="page">Inicio</a></li>
+                <li class="menu-item"><a href="#about" class="menu-link">Acerca</a></li>
+                <li class="menu-item"><a href="#skills" class="menu-link">Conocimiento</a></li>
+                <li class="menu-item"><a href="#experiences" class="menu-link">Experiencia</a></li>
+                <li class="menu-item"><a href="#projects" class="menu-link">Proyecto</a></li>
+                <li class="menu-item"><a href="#contact" class="menu-link">Contacto</a></li>
             </ul>
         </div>
     </header>
@@ -48,8 +49,8 @@
                                 <li class="social-media-item"><a href="https://twitter.com/maryluzph2000" class="social-media-link" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
                             </ul>
                             <div class="about-view-work">
-                                <button class="btn-about-me btn-home">Mas sobre mi</button>
-                                <button class="btn-view-work btn-home hover-bg-orange">Ver trabajos</button>
+                                <a class="btn-about-me btn-home" href="#about">Mas sobre mi</a>
+                                <a class="btn-view-work btn-home hover-bg-orange" href="#projects">Ver trabajos</a>
                             </div>
                         </div>
                     </div>
@@ -62,7 +63,7 @@
                 </svg>
             </div>
     </section>
-    <section class="about">
+    <section class="about" id="about">
         <article class="container">
             <div class="center">
                 <div class="title">
@@ -94,7 +95,7 @@
             </div>
         </article>
     </section>
-    <section class="skills">
+    <section class="skills" id="skills">
         <div class="transparent-mask">
             <article class="container">
                 <div class="center">
@@ -150,7 +151,7 @@
             </article>
         </div>
     </section>
-    <section class="experiences">
+    <section class="experiences" id="experiences">
         <article class="container">
             <div class="center">
                 <div class="title">
@@ -182,33 +183,11 @@
                             </div>
                         </div>
                     </div>
-                    <div class="experience">
-                        <div class="experience-content">
-                            <h3 class="position">Proyecto personal</h3>
-                            <span class="years">2021-2022</span>
-                            <span class="company-name">sise</span>
-                            <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas culpa fugit, consequatur, provident nemo sequi aliquam adipisci voluptate soluta, obcaecati ipsam ab earum. Adipisci distinctio incidunt quas doloremque ea natus!</p>
-                            <div class="icon-experience">
-                                <i class="fa-solid fa-suitcase"></i>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="experience">
-                        <div class="experience-content">
-                            <h3 class="position">Proyecto personal</h3>
-                            <span class="years">2021-2022</span>
-                            <span class="company-name">sise</span>
-                            <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas culpa fugit, consequatur, provident nemo sequi aliquam adipisci voluptate soluta, obcaecati ipsam ab earum. Adipisci distinctio incidunt quas doloremque ea natus!</p>
-                            <div class="icon-experience">
-                                <i class="fa-solid fa-suitcase"></i>
-                            </div>
-                        </div>
-                    </div>
                 </div>
             </div>
         </article>
     </section>
-    <section class="projects">
+    <section class="projects" id="projects">
         <div class="transparent-mask">
             <div class="container">
                 <div class="center">
@@ -221,16 +200,16 @@
                     <div class="project-list">
                         <div class="project">
                                 <div class="project-image">
-                                        <img src="assets/IMG/2.png" alt="my pets">
+                                        <img src="assets/IMG/tendenze.png" alt="tendenze">
                                         <div class="project-details">
-                                            <h3 class="project-name">My Pets</h3>
-                                            <p class="project-category">Blog de perros</p>
+                                            <h3 class="project-name">Tendenze</h3>
+                                            <p class="project-category">Grupo tendenze y comunicaciones</p>
                                             <div class="project-links">
                                                 <div class="view-project ">
                                                     <div class="tooltip">
                                                         Ver proyecto
                                                     </div>
-                                                    <a href="http://localhost/wordpress/mypets" target="_blank"><i class="fa-solid fa-eye"></i></a>
+                                                    <a href="http://localhost/wordpress/tendenze" target="_blank"><i class="fa-solid fa-eye"></i></a>
                                                 </div>  
                                             </div>
                                         </div>
@@ -238,7 +217,7 @@
                         </div>
                         <div class="project">
                                 <div class="project-image">
-                                        <img src="assets/IMG/3.png" alt="my pets">
+                                        <img src="assets/IMG/hiddenBeauty.png" alt="hidden beauty">
                                         <div class="project-details">
                                             <h3 class="project-name">Hidden Beauty</h3>
                                             <p class="project-category">Salon de belleza</p>
@@ -255,16 +234,16 @@
                         </div>
                         <div class="project">
                                 <div class="project-image">
-                                        <img src="assets/IMG/1.png" alt="my pets">
+                                        <img src="assets/IMG/myPets.png" alt="my pets">
                                         <div class="project-details">
-                                            <h3 class="project-name">Grupo tendeze comunicaciones</h3>
-                                            <p class="project-category">Blog</p>
+                                            <h3 class="project-name">My pets</h3>
+                                            <p class="project-category">Blog de perros</p>
                                             <div class="project-links">
                                                 <div class="view-project ">
                                                     <div class="tooltip">
                                                         Ver proyecto
                                                     </div>
-                                                    <a href="http://localhost/wordpress/tendenze" target="_blank"><i class="fa-solid fa-eye"></i></a>
+                                                    <a href="http://localhost/wordpress/myPets" target="_blank"><i class="fa-solid fa-eye"></i></a>
                                                 </div>  
                                             </div>
                                         </div>
@@ -275,7 +254,7 @@
             </div>
         </div>
     </section>
-    <section class="contact">
+    <section class="contact" id="contact">
         <div class="container">
             <div class="center">
                 <div class="title">
