delete img myPets

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                         </div>
                         <div class="project">
                             <div class="project-image">
-                                    <img src="assets/IMG/myPets.png" alt="my pets">
+                                    <img src="assets/IMG/hiddenBeauty.png" alt="my pets">
                                     <div class="project-details">
                                         <h3 class="project-name">My pets</h3>
                                         <p class="project-category">Blog de perros</p>
