--- a/index.html
+++ b/index.html
@@ -83,12 +83,11 @@
                         <h4>DESARROLLADORA WEB</h4>
                         <div class="description-about">
                             <p>
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum, deleniti tempora repellat in sed laborum maiores dolore porro facere quaerat, voluptates doloribus reprehenderit obcaecati pariatur saepe quas beatae fuga sequi?
+                                Desarollo paginas web personalizadas con el CMS wordpress, dispuesta a investigar y seguir aprendiendo nuevas funcionalidad de la web.
                             </p>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis quas, vitae in ad sunt nobis velit. Eius quia distinctio ut, assumenda autem quibusdam temporibus, accusantium soluta laboriosam, quas officiis asperiores.</p>
-                            <div class="download-cv">
+                            <!--<div class="download-cv">
                                 <a href="#" class="btn-download-cv hover-bg-orange"><span>DESCARGAR CV</span></a>
-                            </div>
+                            </div>-->
                         </div>
                     </div>
                 </div>
@@ -142,7 +141,7 @@
                             <h4 class="skill-name">CSS3</h4>
                             <div class="progress">
                                 <div class="progress-bar css">
-                                    70%
+                                    80%
                                 </div>
                             </div>
                         </div>
@@ -166,18 +165,7 @@
                             <h3 class="position">Proyecto personal</h3>
                             <span class="years">2021-2022</span>
                             <span class="company-name">sise</span>
-                            <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas culpa fugit, consequatur, provident nemo sequi aliquam adipisci voluptate soluta, obcaecati ipsam ab earum. Adipisci distinctio incidunt quas doloremque ea natus!</p>
-                            <div class="icon-experience">
-                                <i class="fa-solid fa-suitcase"></i>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="experience">
-                        <div class="experience-content">
-                            <h3 class="position">Proyecto personal</h3>
-                            <span class="years">2021-2022</span>
-                            <span class="company-name">sise</span>
-                            <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas culpa fugit, consequatur, provident nemo sequi aliquam adipisci voluptate soluta, obcaecati ipsam ab earum. Adipisci distinctio incidunt quas doloremque ea natus!</p>
+                            <p class="description">Desarollo de proyectos personales</p>
                             <div class="icon-experience">
                                 <i class="fa-solid fa-suitcase"></i>
                             </div>
@@ -209,7 +197,7 @@
                                                     <div class="tooltip">
                                                         Ver proyecto
                                                     </div>
-                                                    <a href="http://localhost/wordpress/tendenze" target="_blank"><i class="fa-solid fa-eye"></i></a>
+                                                    <a href="https://tendenzeWeb001.000webhostapp.com/" target="_blank"><i class="fa-solid fa-eye"></i></a>
                                                 </div>  
                                             </div>
                                         </div>
@@ -226,7 +214,7 @@
                                                     <div class="tooltip">
                                                         Ver proyecto
                                                     </div>
-                                                    <a href="http://localhost/wordpress/hiddenBeauty" target="_blank"><i class="fa-solid fa-eye"></i></a>
+                                                    <a href="https://hiddenbeauty025.000webhostapp.com/" target="_blank"><i class="fa-solid fa-eye"></i></a>
                                                 </div>  
                                             </div>
                                         </div>
@@ -243,7 +231,7 @@
                                                 <div class="tooltip">
                                                     Ver proyecto
                                                 </div>
-                                                <a href="http://localhost/wordpress/myPets" target="_blank"><i class="fa-solid fa-eye"></i></a>
+                                                <a href="https://mypets00.000webhostapp.com/" target="_blank"><i class="fa-solid fa-eye"></i></a>
                                             </div>  
                                         </div>
                                     </div>
