--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="assets/CSS/style.css">
-    <title>Document</title>
+    <link rel="icon" href='assets/IMG/logo01.png'>
+	<link rel="apple-touch" href='assets/IMG/logo01.png'>
+    <title>Mary</title>
 </head>
 <body>
     <header class="header" id="header">
@@ -23,7 +25,7 @@
             <ul class="menu" id="menu">
                 <div class="logo">
                     <a href="index.html">
-                        <img src="assets/IMG/logo.png" alt="logo ml">
+                        <img src="assets/IMG/logo01.png" alt="logo ml">
                     </a>
                 </div>
                 <li class="menu-item"><a href="index.html" class="menu-link" aria-current="page">Inicio</a></li>
