add hidden beauty project url

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                                                     <div class="tooltip">
                                                         Ver proyecto
                                                     </div>
-                                                    <a href="https://hiddenbeauty025.000webhostapp.com/" target="_blank"><i class="fa-solid fa-eye"></i></a>
+                                                    <a href="https://hiddenbeweb.000webhostapp.com/" target="_blank"><i class="fa-solid fa-eye"></i></a>
                                                 </div>  
                                             </div>
                                         </div>
