add project filmnow

--- a/index.html
+++ b/index.html
@@ -239,6 +239,23 @@
                                     </div>
                             </div>
                         </div>
+                        <div class="project">
+                            <div class="project-image">
+                                    <img src="assets/IMG/filmnow.png" alt="filmnow">
+                                    <div class="project-details">
+                                        <h3 class="project-name">Filmnow</h3>
+                                        <p class="project-category">Series y peliculas</p>
+                                        <div class="project-links">
+                                            <div class="view-project ">
+                                                <div class="tooltip">
+                                                    Ver proyecto
+                                                </div>
+                                                <a href="https://filmnowapp.000webhostapp.com/" target="_blank"><i class="fa-solid fa-eye"></i></a>
+                                            </div>  
+                                        </div>
+                                    </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
