tendenze project url change

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                                                     <div class="tooltip">
                                                         Ver proyecto
                                                     </div>
-                                                    <a href="https://tendenzeWeb001.000webhostapp.com/" target="_blank"><i class="fa-solid fa-eye"></i></a>
+                                                    <a href="https://tendenzeapp.000webhostapp.com/" target="_blank"><i class="fa-solid fa-eye"></i></a>
                                                 </div>  
                                             </div>
                                         </div>
