--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
                     </a>
                 </div>
                 <li class="menu-item"><a href="index.html" class="menu-link" aria-current="page">Inicio</a></li>
-                <li class="menu-item"><a href="#about" class="menu-link">Acerca</a></li>
-                <li class="menu-item"><a href="#skills" class="menu-link">Conocimiento</a></li>
-                <li class="menu-item"><a href="#experiences" class="menu-link">Experiencia</a></li>
-                <li class="menu-item"><a href="#projects" class="menu-link">Proyecto</a></li>
-                <li class="menu-item"><a href="#contact" class="menu-link">Contacto</a></li>
+                <li class="menu-item"><a href="#sobremi" class="menu-link">Acerca</a></li>
+                <li class="menu-item"><a href="#conocimientos" class="menu-link">Conocimiento</a></li>
+                <li class="menu-item"><a href="#experiencia" class="menu-link">Experiencia</a></li>
+                <li class="menu-item"><a href="#proyectos" class="menu-link">Proyecto</a></li>
+                <li class="menu-item"><a href="#contacto" class="menu-link">Contacto</a></li>
             </ul>
         </div>
     </header>
@@ -65,7 +65,7 @@
                 </svg>
             </div>
     </section>
-    <section class="about" id="about">
+    <section class="about" id="sobremi">
         <article class="container">
             <div class="center">
                 <div class="title">
@@ -96,7 +96,7 @@
             </div>
         </article>
     </section>
-    <section class="skills" id="skills">
+    <section class="skills" id="conocimientos">
         <div class="transparent-mask">
             <article class="container">
                 <div class="center">
@@ -152,7 +152,7 @@
             </article>
         </div>
     </section>
-    <section class="experiences" id="experiences">
+    <section class="experiences" id="experiencia">
         <article class="container">
             <div class="center">
                 <div class="title">
@@ -177,7 +177,7 @@
             </div>
         </article>
     </section>
-    <section class="projects" id="projects">
+    <section class="projects" id="proyectos">
         <div class="transparent-mask">
             <div class="container">
                 <div class="center">
@@ -261,7 +261,7 @@
             </div>
         </div>
     </section>
-    <section class="contact" id="contact">
+    <section class="contact" id="contacto">
         <div class="container">
             <div class="center">
                 <div class="title">
