--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                                 <li class="social-media-item"><a href="https://twitter.com/maryluzph2000" class="social-media-link" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
                             </ul>
                             <div class="about-view-work">
-                                <a class="btn-about-me btn-home" href="#about">Mas sobre mi</a>
-                                <a class="btn-view-work btn-home hover-bg-orange" href="#projects">Ver trabajos</a>
+                                <a class="btn-about-me btn-home" href="#sobremi">Mas sobre mi</a>
+                                <a class="btn-view-work btn-home hover-bg-orange" href="#proyectos">Ver trabajos</a>
                             </div>
                         </div>
                     </div>
@@ -85,7 +85,7 @@
                         <h4>DESARROLLADORA WEB</h4>
                         <div class="description-about">
                             <p>
-                                Desarollo paginas web personalizadas con el CMS wordpress, dispuesta a investigar y seguir aprendiendo nuevas funcionalidad de la web.
+                                Desarrollo sitios web modernos y responsivos en wordpress. Siempre lista para investigar y aprender constantemente nuevas características y tecnologías.
                             </p>
                             <!--<div class="download-cv">
                                 <a href="#" class="btn-download-cv hover-bg-orange"><span>DESCARGAR CV</span></a>
@@ -116,10 +116,26 @@
                             </div>
                         </div>
                         <div class="skill">
+                            <h4 class="skill-name">CSS3 (Sass,Tailwind, Bootstrap)</h4>
+                            <div class="progress">
+                                <div class="progress-bar css">
+                                    80%
+                                </div>
+                            </div>
+                        </div>
+                        <div class="skill">
                             <h4 class="skill-name">Javascript</h4>
                             <div class="progress">
                                 <div class="progress-bar javascript">
-                                    60%
+                                    70%
+                                </div>
+                            </div>
+                        </div>
+                        <div class="skill">
+                            <h4 class="skill-name">Wordpress (Themes)</h4>
+                            <div class="progress">
+                                <div class="progress-bar wordpress">
+                                    75%
                                 </div>
                             </div>
                         </div>
@@ -127,23 +143,31 @@
                             <h4 class="skill-name">PHP</h4>
                             <div class="progress">
                                 <div class="progress-bar php" >
-                                    60%
-                                </div>
-                            </div>
-                        </div>
-                        <div class="skill">
-                            <h4 class="skill-name">Wordpress</h4>
-                            <div class="progress">
-                                <div class="progress-bar wordpress">
                                     65%
                                 </div>
                             </div>
                         </div>
                         <div class="skill">
-                            <h4 class="skill-name">CSS3</h4>
+                            <h4 class="skill-name">SQL (SQL Server, MySQL)</h4>
                             <div class="progress">
-                                <div class="progress-bar css">
-                                    80%
+                                <div class="progress-bar sql" >
+                                    85%
+                                </div>
+                            </div>
+                        </div>
+                        <div class="skill">
+                            <h4 class="skill-name">Git(github)</h4>
+                            <div class="progress">
+                                <div class="progress-bar git">
+                                    75%
+                                </div>
+                            </div>
+                        </div>
+                        <div class="skill">
+                            <h4 class="skill-name">Adobe XD, Figma</h4>
+                            <div class="progress">
+                                <div class="progress-bar desing">
+                                    50%
                                 </div>
                             </div>
                         </div>
@@ -189,21 +213,21 @@
                     </div>
                     <div class="project-list">
                         <div class="project">
-                                <div class="project-image">
-                                        <img src="assets/IMG/tendenze.png" alt="tendenze">
-                                        <div class="project-details">
-                                            <h3 class="project-name">Tendenze</h3>
-                                            <p class="project-category">Grupo tendenze y comunicaciones</p>
-                                            <div class="project-links">
-                                                <div class="view-project ">
-                                                    <div class="tooltip">
-                                                        Ver proyecto
-                                                    </div>
-                                                    <a href="https://tendenzeapp.000webhostapp.com/" target="_blank"><i class="fa-solid fa-eye"></i></a>
-                                                </div>  
-                                            </div>
+                            <div class="project-image">
+                                    <img src="assets/IMG/mypet.png" alt="my pets">
+                                    <div class="project-details">
+                                        <h3 class="project-name">My pets</h3>
+                                        <p class="project-category">Blog de perros</p>
+                                        <div class="project-links">
+                                            <div class="view-project ">
+                                                <div class="tooltip">
+                                                    Ver proyecto
+                                                </div>
+                                                <a href="https://mypets00.000webhostapp.com/" target="_blank"><i class="fa-solid fa-eye"></i></a>
+                                            </div>  
                                         </div>
-                                </div>
+                                    </div>
+                            </div>
                         </div>
                         <div class="project">
                                 <div class="project-image">
@@ -224,16 +248,16 @@
                         </div>
                         <div class="project">
                             <div class="project-image">
-                                    <img src="assets/IMG/mypet.png" alt="my pets">
+                                    <img src="assets/IMG/tendenze.png" alt="tendenze">
                                     <div class="project-details">
-                                        <h3 class="project-name">My pets</h3>
-                                        <p class="project-category">Blog de perros</p>
+                                        <h3 class="project-name">Tendenze</h3>
+                                        <p class="project-category">Grupo tendenze y comunicaciones</p>
                                         <div class="project-links">
                                             <div class="view-project ">
                                                 <div class="tooltip">
                                                     Ver proyecto
                                                 </div>
-                                                <a href="https://mypets00.000webhostapp.com/" target="_blank"><i class="fa-solid fa-eye"></i></a>
+                                                <a href="https://tendenzeapp.000webhostapp.com/" target="_blank"><i class="fa-solid fa-eye"></i></a>
                                             </div>  
                                         </div>
                                     </div>
