about me update

--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
                             <h1>Hola, soy Mary</h1>
                             <h3><span class="web-developer">desarrolladora web</span></h3>
                             <ul class="social-media">
-                                <li class="social-media-item"><a href="https://www.facebook.com/profile.php?id=100011653231740" class="social-media-link" target="_blank" ><i class="fa-brands fa-facebook-f"></i></a></li>
+                                <li class="social-media-item"><a href="#" class="social-media-link" target="_blank" ><i class="fa-brands fa-facebook-f"></i></a></li>
                                 <li class="social-media-item"><a href="https://www.linkedin.com/in/mary-luz-pariona-3b5652217/" class="social-media-link" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a></li>
                                 <li class="social-media-item"><a href="https://github.com/maryluz1028" class="social-media-link" target="_blank"><i class="fa-brands fa-github"></i></a></li>
-                                <li class="social-media-item"><a href="https://twitter.com/maryluzph2000" class="social-media-link" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
+                                <li class="social-media-item"><a href="#" class="social-media-link" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
                             </ul>
                             <div class="about-view-work">
                                 <a class="btn-about-me btn-home" href="#sobremi">Mas sobre mi</a>
@@ -82,7 +82,10 @@
                     </div>
                     <div class="about-content">
                         <h3>Soy<span>Mary</span></h3>
-                        <h4>DESARROLLADORA WEB</h4>
+                        <div class="dev-insti">
+                            <h4 class="dev">DESARROLLADORA WEB</h4>
+                            <h4 class="name-instituto">INSTITUTO SISE</h4>
+                        </div>
                         <div class="description-about">
                             <p>
                                 Desarrollo sitios web modernos y responsivos en wordpress. Siempre lista para investigar y aprender constantemente nuevas características y tecnologías.
@@ -111,7 +114,7 @@
                             <h4 class="skill-name">Html5</h4>
                             <div class="progress">
                                 <div class="progress-bar html">
-                                    85%
+                                    100%
                                 </div>
                             </div>
                         </div>
@@ -135,7 +138,7 @@
                             <h4 class="skill-name">Wordpress (Themes)</h4>
                             <div class="progress">
                                 <div class="progress-bar wordpress">
-                                    75%
+                                    90%
                                 </div>
                             </div>
                         </div>
@@ -151,7 +154,7 @@
                             <h4 class="skill-name">SQL (SQL Server, MySQL)</h4>
                             <div class="progress">
                                 <div class="progress-bar sql" >
-                                    85%
+                                    90%
                                 </div>
                             </div>
                         </div>
@@ -246,6 +249,7 @@
                                         </div>
                                 </div>
                         </div>
+                        <!--
                         <div class="project">
                             <div class="project-image">
                                     <img src="assets/IMG/tendenze.png" alt="tendenze">
@@ -262,7 +266,7 @@
                                         </div>
                                     </div>
                             </div>
-                        </div>
+                        </div>-->
                         <div class="project">
                             <div class="project-image">
                                     <img src="assets/IMG/filmnow.png" alt="filmnow">
